[package]
name = "rust_upload"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0.34"
reqwest = { version = "0.12.8", features = ["blocking"] }
tokio = { version = "1.41.1", features = ["full"] }
zip = "2.2.0"
futures = "0.3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "upload_script"
path = "src/main.rs"